fix styling of the logo so that not the whole header whitespace is a link

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -46,12 +46,16 @@ header > div {
   background-color: #fff;
 
   h1 {
-    width: 200px;
-    height: 64px;
+    display: inline-block;
     margin: 0px;
-    background: url(/images/travis-ci.png) no-repeat;
-    overflow: hidden;
-    text-indent: -9999px;
+    a {
+      display: block;
+      width: 200px;
+      height: 64px;
+      background: url(/images/travis-ci.png) no-repeat;
+      overflow: hidden;
+      text-indent: -9999px;
+    }
   }
   h2 {
     position: absolute;
